# python-microworkout

./: Makefile  pyproject.toml
.docker/: pro.yml  staging.yml
.docker/app/: Dockerfile
.docker/environments/: pro.env
.docker/nginx/dev/site-confs/: default
.docker/scripts/: create_db_container.sh  postman_to_swagger.sh
application/ports/: microworkouts.py  workouts.py
application/services/: microworkouts.py  workouts.py
config/: urls.py
config/settings/: base.py  custom_logging.py  oauth.py  tasks.py
domain/entities/: microworkout.py  workout.py
driven/db/microworkouts/: apps.py  models.py  repository.py
driven/db/microworkouts/migrations/: 0001_initial.py  __init__.py
driven/db/users/: models.py
driven/db/users/migrations/: 0001_initial.py
driven/db/workouts/: apps.py  models.py  repository.py
driven/db/workouts/migrations/: 0001_initial.py  __init__.py
driving/api/v1/: microworkouts.py  schemas.py  urls.py  workouts.py
microworkout/: .gitignore  README.md  pyproject.toml
microworkout/.docker/: pro.yml  staging.yml
microworkout/.docker/environments/: local.env  staging.env
microworkout/.docker/nginx/pro/fail2ban/: jail.local
microworkout/.docker/scripts/: local.sh
microworkout/config/: asgi.py  urls.py
microworkout/config/settings/: i18n.py
scripts/: install_private_repositories.sh  run_deploy.sh
